# onto-market

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CURSOR.md  GEMINI.md  Makefile  README.md  REPO_MAP.md  langgraph.json  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
.cursor/: rules.md
.cursor/rules/: onto-market.mdc
agents/: memory_agent.py  ontology_agent.py  planning_agent.py  state.py
config/: __init__.py  config.py
core/: agent_base.py  graph.py  llm_router.py
data/: memory.db  ontology.json
onto_market.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ontology/: __init__.py  graph.py
reports/: architecture_drift.json  architecture_drift.md  boundary_matrix.json  boundary_matrix.md  config_surface.json  config_surface.md  cycle_detector.md  cycles.json  cycles.md  dead_weight.json  dead_weight.md  entrypoint_map.json  entrypoint_map.md  import_graph.dot  import_graph.json  import_graph.md  import_graph.mmd  repo_census.json  repo_census.md  streamlit_app.py  symbol_index.json  symbol_index.md  symbol_xref.json  symbol_xref.md  test_map.json  test_map.md
scripts/: _bootstrap.py  audit_ontology.py  backfill_metadata.py  check_topology.py  cli.py  enrich_ontology.py  fetch_resolved.py  generate_repo_map.py  import_graph.py  ml_research.py  ml_status.py  ml_train.py  ml_train_torch.py  refresh_markets.py  repo_census.py
scripts/repo_tools/: architecture_drift.py  boundary_matrix.py  cartography.py  config_surface.py  cycle_detector.py  dead_weight.py  entrypoint_map.py  import_graph.py  symbol_index.py  symbol_xref.py  test_map.py
src/: context.py
src/connectors/: gamma.py  news.py  polymarket.py  search.py
src/devtools/repo_tools/: _common.py  architecture_drift.py  boundary_matrix.py  cartography.py  census.py  config_surface.py  cycle_detector.py  dead_weight.py  entrypoint_map.py  import_graph.py  symbol_index.py  symbol_xref.py  test_map.py
src/memory/: manager.py  zep_reader.py
src/onto_market/: __init__.py  context.py  main.py
src/onto_market/agents/: __init__.py  memory_agent.py  ontology_agent.py  planning_agent.py  state.py
src/onto_market/config/: config.py
src/onto_market/connectors/: __init__.py  gamma.py  news.py  polymarket.py  search.py
src/onto_market/core/: __init__.py  agent_base.py  llm_router.py  state.py
src/onto_market/dashboard/: __init__.py  explorer.html  serve.py
src/onto_market/devtools/: __init__.py
src/onto_market/devtools/repo_tools/: __init__.py  _common.py  _paths.py  architecture_drift.py  boundary_matrix.py  cartography.py  census.py  config_surface.py  cycle_detector.py  dead_weight.py  entrypoint_map.py  import_graph.py  ontology_audit.py  repo_map.py  symbol_index.py  symbol_xref.py  test_map.py
src/onto_market/memory/: __init__.py  manager.py  zep_reader.py
src/onto_market/ml_research/: __init__.py  artifacts.py  dataset.py  evaluate.py  features.py  inference.py  models.py  program.md  runner.py  torch_train.py  train.py
src/onto_market/ontology/: enricher.py  graph.py
src/onto_market/polymarket_agents/: __init__.py
src/onto_market/polymarket_agents/utils/: analytics.py  database.py
src/onto_market/swarm/: __init__.py  archetypes.py  dynamics.py  oracle.py
src/onto_market/trading/: __init__.py  executor.py  trader.py
src/onto_market/utils/: llm_client.py  logger.py  retry.py
src/polymarket_agents/utils/: __init__.py  database.py  objects.py
src/swarm/: __init__.py  dynamics.py  oracle.py
src/trading/: __init__.py  executor.py  trader.py
src/utils/: __init__.py  file_parser.py  llm_client.py
tests/: conftest.py  test_analytics.py  test_integration.py  test_memory.py  test_ml_research.py  test_ml_torch.py  test_planning_agent.py  test_repo_tools.py  test_swarm.py  test_trading.py
