[project]
name = "onto-market"
version = "0.1.0"
description = "Swarm Intelligence × Polymarket Agents × multi-LLM (Grok/Gemini/Claude/OpenAI)"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.60.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv",
    "py-clob-client",
    "py-order-utils",
    "web3>=7.0.0",
    "rich",
    "pandas",
    "numpy",
    "charset-normalizer",
    "tenacity>=8.0.0",
    "requests",
    "httpx",
    "networkx>=3.0",
    "typer>=0.9.0",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy",
]
dashboard = [
    "streamlit>=1.30.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
onto-market = "main:main"
repo-census = "devtools.repo_tools.census:main"
repo-import-graph = "devtools.repo_tools.import_graph:main"
repo-boundary = "devtools.repo_tools.boundary_matrix:main"
repo-entrypoints = "devtools.repo_tools.entrypoint_map:main"
repo-symbols = "devtools.repo_tools.symbol_index:main"
repo-xref = "devtools.repo_tools.symbol_xref:main"
repo-test-map = "devtools.repo_tools.test_map:main"
repo-config = "devtools.repo_tools.config_surface:main"
repo-cycles = "devtools.repo_tools.cycle_detector:main"
repo-dead-weight = "devtools.repo_tools.dead_weight:main"
repo-arch-drift = "devtools.repo_tools.architecture_drift:main"
repo-cartography = "devtools.repo_tools.cartography:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
    "polymarket_agents*",
    "connectors*",
    "memory*",
    "swarm*",
    "trading*",
    "utils*",
    "devtools*",
    "agents*",
    "core*",
    "config*",
]

[tool.mypy]
python_executable = "/home/orson-dev/anaconda3/envs/onto-market/bin/python"
mypy_path = ["src"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "tavily.*",
    "py_clob_client.*",
    "py_order_utils.*",
    "web3.*",
    "networkx.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
