[project]
name = "onto-market"
version = "0.1.0"
description = "Swarm Intelligence × Polymarket Agents × multi-LLM (Grok/Gemini/Claude/OpenAI)"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.60.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv",
    "py-clob-client",
    "py-order-utils",
    "web3>=7.0.0",
    "rich",
    "pandas",
    "numpy",
    "charset-normalizer",
    "tenacity>=8.0.0",
    "requests",
    "httpx",
    "networkx>=3.0",
    "typer>=0.9.0",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy",
]
dashboard = [
    "streamlit>=1.30.0",
    "matplotlib>=3.7.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]
torch = [
    "torch>=2.4",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]

[project.scripts]
onto-market = "onto_market.main:main"
repo-census = "onto_market.devtools.repo_tools.census:main"
repo-import-graph = "onto_market.devtools.repo_tools.import_graph:main"
repo-boundary = "onto_market.devtools.repo_tools.boundary_matrix:main"
repo-entrypoints = "onto_market.devtools.repo_tools.entrypoint_map:main"
repo-symbols = "onto_market.devtools.repo_tools.symbol_index:main"
repo-xref = "onto_market.devtools.repo_tools.symbol_xref:main"
repo-test-map = "onto_market.devtools.repo_tools.test_map:main"
repo-config = "onto_market.devtools.repo_tools.config_surface:main"
repo-cycles = "onto_market.devtools.repo_tools.cycle_detector:main"
repo-dead-weight = "onto_market.devtools.repo_tools.dead_weight:main"
repo-arch-drift = "onto_market.devtools.repo_tools.architecture_drift:main"
repo-cartography = "onto_market.devtools.repo_tools.cartography:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["onto_market*"]

[tool.mypy]
python_executable = "/home/orson-dev/anaconda3/envs/onto-market/bin/python"
mypy_path = ["src"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "tavily.*",
    "py_clob_client.*",
    "py_order_utils.*",
    "web3.*",
    "networkx.*",
    "pandas.*",
    "sklearn.*",
    "joblib.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
